; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_cursoricon.c_map_fileW.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/user32/windows/extr_cursoricon.c_map_fileW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GENERIC_READ = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@OPEN_EXISTING = common dso_local global i32 0, align 4
@FILE_FLAG_RANDOM_ACCESS = common dso_local global i32 0, align 4
@INVALID_HANDLE_VALUE = common dso_local global i64 0, align 8
@PAGE_READONLY = common dso_local global i32 0, align 4
@FILE_MAP_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i32*)* @map_fileW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @map_fileW(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  store i8* null, i8** %7, align 8
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @GENERIC_READ, align 4
  %10 = load i32, i32* @FILE_SHARE_READ, align 4
  %11 = load i32, i32* @OPEN_EXISTING, align 4
  %12 = load i32, i32* @FILE_FLAG_RANDOM_ACCESS, align 4
  %13 = call i64 @CreateFileW(i32 %8, i32 %9, i32 %10, i32* null, i32 %11, i32 %12, i32 0)
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @INVALID_HANDLE_VALUE, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %39

17:                                               ; preds = %2
  %18 = load i64, i64* %5, align 8
  %19 = load i32, i32* @PAGE_READONLY, align 4
  %20 = call i64 @CreateFileMappingW(i64 %18, i32* null, i32 %19, i32 0, i32 0, i32* null)
  store i64 %20, i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %36

23:                                               ; preds = %17
  %24 = load i64, i64* %6, align 8
  %25 = load i32, i32* @FILE_MAP_READ, align 4
  %26 = call i8* @MapViewOfFile(i64 %24, i32 %25, i32 0, i32 0, i32 0)
  store i8* %26, i8** %7, align 8
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @CloseHandle(i64 %27)
  %29 = load i32*, i32** %4, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %35

31:                                               ; preds = %23
  %32 = load i64, i64* %5, align 8
  %33 = call i32 @GetFileSize(i64 %32, i32* null)
  %34 = load i32*, i32** %4, align 8
  store i32 %33, i32* %34, align 4
  br label %35

35:                                               ; preds = %31, %23
  br label %36

36:                                               ; preds = %35, %17
  %37 = load i64, i64* %5, align 8
  %38 = call i32 @CloseHandle(i64 %37)
  br label %39

39:                                               ; preds = %36, %2
  %40 = load i8*, i8** %7, align 8
  ret i8* %40
}

declare dso_local i64 @CreateFileW(i32, i32, i32, i32*, i32, i32, i32) #1

declare dso_local i64 @CreateFileMappingW(i64, i32*, i32, i32, i32, i32*) #1

declare dso_local i8* @MapViewOfFile(i64, i32, i32, i32, i32) #1

declare dso_local i32 @CloseHandle(i64) #1

declare dso_local i32 @GetFileSize(i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
